Fixed problem of squares overflowing container
The issue was that the borders weren't included in the calcuations

--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ h1, button {
 }
 body {
     height: 100vh;
-    overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,25 +39,17 @@ button {
 
 #container {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
-    width: 600px;
-    height: auto;
+    width: 568px;
+    height: 568px;
     border: 2px solid red;
-    flex-grow: 0; /* to make the container with the buttons and grid the same size 
-    regardless of number of squares*/
-}
-
-.row {
-    display: flex;
-    gap: 0;
 }
 
 .column {
-    width: 35px;
-    height: 35px;
+    display: flex;
+    aspect-ratio: 1;
     background-color: lightgrey;
-    border: 1px solid white;
 }
 
 
